# u-boot-concept

./: .azure-pipelines.yml  .gitattributes  .gitignore  .gitlab-ci-release.yml  .gitlab-ci.yml  .snapcraft.yaml  .travis.yml  Kbuild  Kconfig  MAINTAINERS  MAKEALL  Makefile  Makefile.try  README  README.md  RECOVERY_MRC_CACHE  RW_VAR_MRC_CACHE  boards.cfg  cmdsock.py  cmdsock_pb2.py  config.mk  do-cb.sh  doit  fix-bin.py  fred.c  hikey-u-boot.mak  log.qc  mkconfig  mytest.py  nanopb_pb2.py  rk3576-boost.c  try.c  try.sh  ups.its
.claude/: README.md
api/: Kconfig  api.c  api_display.c  api_platform-powerpc.c  symbols.def
arch/: Kconfig
boot/: Kconfig  Makefile  android_ab.c  bdevice-uclass.c  bmethod-uclass.c  bmethod_distro.c  bmethod_efi.c  bmethod_pxe.c  bootdev-uclass.c  bootdev.c  bootdevice.c  bootflow.c  bootflow_internal.h  bootflow_menu.c  bootm.c  bootm_final.c  bootm_os.c  bootmeth-uclass.c  bootmeth_android.c  bootmeth_cros.c  bootmeth_distro.c  bootmeth_efi.c  bootmeth_efi_mgr.c  bootmeth_extlinux.c  bootmeth_fel.c  bootmeth_pxe.c  bootmeth_qfw.c  bootmeth_sandbox.c  bootmeth_script.c  bootmethod.c  cedit.c  (+48 more)
examples/rust/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
examples/rust/src/: demo.rs  rust_helper.rs
lib/rust/: Cargo.toml
lib/rust/src/: lib.rs
tools/binman/: README  README.entries  README.rst  binman.py  binman.rst  bintool.py  bintools.rst  bsection.py  cbfs_util.py  cbfs_util_test.py  cmdline.py  comp_util.py  control.py  elf.py  elf_test.py  entries.rst  entry.py  entry_test.py  fdt_test.py  fip_util.py  fip_util_test.py  fmap_util.py  ftest.py  func_test.py  image.py  main.py  missing-blob-help  pyproject.toml  state.py
tools/binman/btool/: _aml_common.py  bootgen.py  csf.py  cst.py  mkimage.py  openssl.py
tools/binman/etype/: _testing.py  aml_encrypt.py  atf_bl31.py  atf_fip.py  blob.py  blob_dtb.py  blob_phase.py  cbfs.py  depthcharge_kernel.py  efi_capsule.py  encrypted.py  fdtmap.py  files.py  fill.py  fit.py  fmap.py  gbb.py  image_header.py  imx8mm_csf.py  intel_fsp_f.py  intel_ifwi.py  mkimage.py  nxp_header_ddrfw.py  nxp_imx8mcst.py  nxp_imx8mimage.py  nxp_imx8mimage_cfg.py  pre_load.py  section.py  text.py  ti_board_config.py  ti_secure_rom.py  u_boot_dtb_with_ucode.py  u_boot_elf.py  u_boot_expanded.py  u_boot_spl_bss_pad.py  u_boot_spl_expanded.py  u_boot_spl_nodtb.py  u_boot_spl_pubkey_dtb.py  u_boot_spl_with_ucode_ptr.py  u_boot_tpl_dtb_with_ucode.py  (+11 more)
tools/binman/test/: 141_replace_cbfs.dts  172_depthcharge_kernel.dts  198_collection.dts  199_collection_section.dts  200_align_default.dts  203_fit_sign.dts  221_fit_split_elf.dts  222_fit_bad_dir.dts  223_fit_bad_dir_config.dts  235_compress_prepend_length_dtb.dts  235_imx_cfg.dts  235_mkimage_filename.dts  236_compress_dtb_missing_bintool.dts  236_imx_cfg_missing.dts  277_replace_fit_sibling.dts  280_xilinx_fsbl_auth.dts  281_spl_pubkey_dtb.dts  283_encrypted_no_algo.dts  284_encrypted_invalid_iv_file.dts  285_encrypted_missing_key.dts  286_encrypted_key_source.dts  287_encrypted_key_file.dts  288_template_fit.dts  290_imx8m_image.dts  290_mkimage_sym.dts  326_fit_encrypt_data.dts  327_fit_encrypt_data_no_key.dts  339_nxp_imx8m.dts  343_nxp_imx8m.dts  344_nxp_imx8m.dts  345_nxp_imx8m.dts  347_bootph_prop.dts
tools/buildman/: board.py  boards.py  bsettings.py  builder.py  builderthread.py  buildman.py  buildman.rst  cmdline.py  control.py  func_test.py  main.py  master.py  net_cmd.py  net_test.py  pyproject.toml  test.py  toolchain.py  worker.py
tools/patman/: README  __init__.py  __main__.py  checkpatch.py  cmdline.py  command.py  control.py  cros_subprocess.py  cser_helper.py  cseries.py  database.py  func_test.py  gitutil.py  main.py  patchstream.py  patchwork.py  patman.rst  pyproject.toml  send.py  series.py  settings.py  status.py  test_checkpatch.py  test_common.py  test_cseries.py  test_util.py  tools.py  tout.py
tools/u_boot_pylib/: command.py  gitutil.py  pyproject.toml  terminal.py  test_util.py  tools.py  tout.py
(+8477 files in other folders)
